// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tooltip > opens tooltip on focus 1`] = `
<div
  aria-describedby=":rg:"
  aria-labelledby=":rg:"
  class="_tooltip_9b26f8"
  id=":ri:"
  role="tooltip"
  style="position: absolute; left: 0px; top: 0px; transform: translate(5px, 6px);"
  tabindex="-1"
>
  <svg
    aria-hidden="true"
    class="_arrow_9b26f8"
    height="10"
    style="position: absolute; pointer-events: none; bottom: 100%; transform: rotate(180deg); left: -1px;"
    viewBox="0 0 10 10"
    width="10"
  >
    <path
      d="M0,0 H10 L5,6 Q5,6 5,6 Z"
      stroke="none"
    />
    <clippath
      id=":rl:"
    >
      <rect
        height="10"
        width="10"
        x="0"
        y="0"
      />
    </clippath>
  </svg>
  <span
    id=":rg:"
  >
    Shown with delay
  </span>
</div>
`;

exports[`Tooltip > opens tooltip on focus where trigger is non interactive 1`] = `
<div>
  <div
    style="padding: 100px;"
  >
    <span
      tabindex="0"
    >
      <button
        aria-disabled="true"
        class="_icon-button_e3253e"
        data-testid="testbutton"
        role="button"
        style="--cpd-icon-button-size: 32px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_ab1fc6"
          style="--cpd-icon-button-size: 100%; --cpd-color-icon-tertiary: var(--cpd-color-icon-disabled);"
        >
          <svg
            class="cpd-icon"
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.175 13.825C9.958 14.608 10.9 15 12 15s2.042-.392 2.825-1.175C15.608 13.042 16 12.1 16 11s-.392-2.042-1.175-2.825C14.042 7.392 13.1 7 12 7s-2.042.392-2.825 1.175C8.392 8.958 8 9.9 8 11s.392 2.042 1.175 2.825Zm4.237-1.412A1.926 1.926 0 0 1 12 13c-.55 0-1.02-.196-1.412-.588A1.926 1.926 0 0 1 10 11c0-.55.196-1.02.588-1.412A1.926 1.926 0 0 1 12 9c.55 0 1.02.196 1.412.588.392.391.588.862.588 1.412 0 .55-.196 1.02-.588 1.412Z"
            />
            <path
              d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0Z"
            />
            <path
              d="M16.23 18.792a12.47 12.47 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0c-.487.12-.972.271-1.455.455a8.04 8.04 0 0 1-1.729-1.454c.89-.412 1.794-.729 2.709-.95A13.76 13.76 0 0 1 12 16c1.1 0 2.183.13 3.25.387a14.78 14.78 0 0 1 2.709.95 8.042 8.042 0 0 1-1.73 1.455Z"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Tooltip > opens tooltip on focus where trigger is non interactive 2`] = `
<div
  aria-describedby=":rm:"
  aria-labelledby=":rm:"
  class="_tooltip_9b26f8"
  id=":ro:"
  role="tooltip"
  style="position: absolute; left: 0px; top: 0px; transform: translate(5px, 6px);"
  tabindex="-1"
>
  <svg
    aria-hidden="true"
    class="_arrow_9b26f8"
    height="10"
    style="position: absolute; pointer-events: none; bottom: 100%; transform: rotate(180deg); left: -1px;"
    viewBox="0 0 10 10"
    width="10"
  >
    <path
      d="M0,0 H10 L5,6 Q5,6 5,6 Z"
      stroke="none"
    />
    <clippath
      id=":rr:"
    >
      <rect
        height="10"
        width="10"
        x="0"
        y="0"
      />
    </clippath>
  </svg>
  <span
    id=":rm:"
  >
    Shown without delay
  </span>
</div>
`;

exports[`Tooltip > overrides default tab index for non interactive triggers 1`] = `
<div>
  <div
    style="padding: 100px;"
  >
    <span
      tabindex="-1"
    >
      <button
        aria-disabled="true"
        class="_icon-button_e3253e"
        data-testid="testbutton"
        role="button"
        style="--cpd-icon-button-size: 32px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_ab1fc6"
          style="--cpd-icon-button-size: 100%; --cpd-color-icon-tertiary: var(--cpd-color-icon-disabled);"
        >
          <svg
            class="cpd-icon"
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.175 13.825C9.958 14.608 10.9 15 12 15s2.042-.392 2.825-1.175C15.608 13.042 16 12.1 16 11s-.392-2.042-1.175-2.825C14.042 7.392 13.1 7 12 7s-2.042.392-2.825 1.175C8.392 8.958 8 9.9 8 11s.392 2.042 1.175 2.825Zm4.237-1.412A1.926 1.926 0 0 1 12 13c-.55 0-1.02-.196-1.412-.588A1.926 1.926 0 0 1 10 11c0-.55.196-1.02.588-1.412A1.926 1.926 0 0 1 12 9c.55 0 1.02.196 1.412.588.392.391.588.862.588 1.412 0 .55-.196 1.02-.588 1.412Z"
            />
            <path
              d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0Z"
            />
            <path
              d="M16.23 18.792a12.47 12.47 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0c-.487.12-.972.271-1.455.455a8.04 8.04 0 0 1-1.729-1.454c.89-.412 1.794-.729 2.709-.95A13.76 13.76 0 0 1 12 16c1.1 0 2.183.13 3.25.387a14.78 14.78 0 0 1 2.709.95 8.042 8.042 0 0 1-1.73 1.455Z"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Tooltip > renders closed by default 1`] = `
<DocumentFragment>
  <div
    style="padding: 100px;"
  >
    <span>
      No tooltip to see here
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > renders default tooltip 1`] = `
<div
  aria-describedby=":ra:"
  aria-labelledby=":ra:"
  class="_tooltip_9b26f8"
  id=":rc:"
  role="tooltip"
  style="position: absolute; left: 0px; top: 0px; transform: translate(5px, 6px);"
  tabindex="-1"
>
  <svg
    aria-hidden="true"
    class="_arrow_9b26f8"
    height="10"
    style="position: absolute; pointer-events: none; bottom: 100%; transform: rotate(180deg); left: -1px;"
    viewBox="0 0 10 10"
    width="10"
  >
    <path
      d="M0,0 H10 L5,6 Q5,6 5,6 Z"
      stroke="none"
    />
    <clippath
      id=":rf:"
    >
      <rect
        height="10"
        width="10"
        x="0"
        y="0"
      />
    </clippath>
  </svg>
  <span
    id=":ra:"
  >
    @bob:example.org
  </span>
</div>
`;

exports[`Tooltip > renders open by default 1`] = `
<DocumentFragment>
  <div
    style="padding: 100px;"
  >
    <button
      aria-describedby=":r2:"
      class="_icon-button_e3253e"
      data-testid="testbutton"
      role="button"
      style="--cpd-icon-button-size: 32px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_ab1fc6"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          class="cpd-icon"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.175 13.825C9.958 14.608 10.9 15 12 15s2.042-.392 2.825-1.175C15.608 13.042 16 12.1 16 11s-.392-2.042-1.175-2.825C14.042 7.392 13.1 7 12 7s-2.042.392-2.825 1.175C8.392 8.958 8 9.9 8 11s.392 2.042 1.175 2.825Zm4.237-1.412A1.926 1.926 0 0 1 12 13c-.55 0-1.02-.196-1.412-.588A1.926 1.926 0 0 1 10 11c0-.55.196-1.02.588-1.412A1.926 1.926 0 0 1 12 9c.55 0 1.02.196 1.412.588.392.391.588.862.588 1.412 0 .55-.196 1.02-.588 1.412Z"
          />
          <path
            d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0Z"
          />
          <path
            d="M16.23 18.792a12.47 12.47 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0c-.487.12-.972.271-1.455.455a8.04 8.04 0 0 1-1.729-1.454c.89-.412 1.794-.729 2.709-.95A13.76 13.76 0 0 1 12 16c1.1 0 2.183.13 3.25.387a14.78 14.78 0 0 1 2.709.95 8.042 8.042 0 0 1-1.73 1.455Z"
          />
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > renders open by default 2`] = `
<div
  aria-describedby=":r0:"
  aria-labelledby=":r0:"
  class="_tooltip_9b26f8"
  id=":r2:"
  role="tooltip"
  style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
  tabindex="-1"
>
  <svg
    aria-hidden="true"
    class="_arrow_9b26f8"
    height="10"
    style="position: absolute; pointer-events: none; bottom: 100%; transform: rotate(180deg);"
    viewBox="0 0 10 10"
    width="10"
  >
    <path
      d="M0,0 H10 L5,6 Q5,6 5,6 Z"
      stroke="none"
    />
    <clippath
      id=":r5:"
    >
      <rect
        height="10"
        width="10"
        x="0"
        y="0"
      />
    </clippath>
  </svg>
  <span
    id=":r0:"
  >
    I'm always open
  </span>
</div>
`;

exports[`Tooltip > renders with component caption 1`] = `
<DocumentFragment>
  <div
    style="padding: 100px;"
  >
    <button
      class="_icon-button_e3253e"
      data-testid="testbutton"
      role="button"
      style="--cpd-icon-button-size: 32px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_ab1fc6"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          class="cpd-icon"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.175 13.825C9.958 14.608 10.9 15 12 15s2.042-.392 2.825-1.175C15.608 13.042 16 12.1 16 11s-.392-2.042-1.175-2.825C14.042 7.392 13.1 7 12 7s-2.042.392-2.825 1.175C8.392 8.958 8 9.9 8 11s.392 2.042 1.175 2.825Zm4.237-1.412A1.926 1.926 0 0 1 12 13c-.55 0-1.02-.196-1.412-.588A1.926 1.926 0 0 1 10 11c0-.55.196-1.02.588-1.412A1.926 1.926 0 0 1 12 9c.55 0 1.02.196 1.412.588.392.391.588.862.588 1.412 0 .55-.196 1.02-.588 1.412Z"
          />
          <path
            d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0Z"
          />
          <path
            d="M16.23 18.792a12.47 12.47 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0c-.487.12-.972.271-1.455.455a8.04 8.04 0 0 1-1.729-1.454c.89-.412 1.794-.729 2.709-.95A13.76 13.76 0 0 1 12 16c1.1 0 2.183.13 3.25.387a14.78 14.78 0 0 1 2.709.95 8.042 8.042 0 0 1-1.73 1.455Z"
          />
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > renders with component caption 2`] = `
<div
  aria-describedby=":r17:"
  aria-labelledby=":r16:"
  class="_tooltip_9b26f8"
  id=":r18:"
  role="tooltip"
  style="position: absolute; left: 0px; top: 0px; transform: translate(5px, 6px);"
  tabindex="-1"
>
  <svg
    aria-hidden="true"
    class="_arrow_9b26f8"
    height="10"
    style="position: absolute; pointer-events: none; bottom: 100%; transform: rotate(180deg); left: -1px;"
    viewBox="0 0 10 10"
    width="10"
  >
    <path
      d="M0,0 H10 L5,6 Q5,6 5,6 Z"
      stroke="none"
    />
    <clippath
      id=":r1b:"
    >
      <rect
        height="10"
        width="10"
        x="0"
        y="0"
      />
    </clippath>
  </svg>
  <span
    id=":r16:"
  >
    Copy
  </span>
  <div
    class="_caption_9b26f8 cpd-theme-dark"
    id=":r17:"
  >
    <kbd>
      Ctrl
    </kbd>
     + 
    <kbd>
      C
    </kbd>
  </div>
</div>
`;

exports[`Tooltip > renders with string caption 1`] = `
<DocumentFragment>
  <div
    style="padding: 100px;"
  >
    <button
      class="_icon-button_e3253e"
      data-testid="testbutton"
      role="button"
      style="--cpd-icon-button-size: 32px;"
      tabindex="0"
    >
      <div
        class="_indicator-icon_ab1fc6"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          class="cpd-icon"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.175 13.825C9.958 14.608 10.9 15 12 15s2.042-.392 2.825-1.175C15.608 13.042 16 12.1 16 11s-.392-2.042-1.175-2.825C14.042 7.392 13.1 7 12 7s-2.042.392-2.825 1.175C8.392 8.958 8 9.9 8 11s.392 2.042 1.175 2.825Zm4.237-1.412A1.926 1.926 0 0 1 12 13c-.55 0-1.02-.196-1.412-.588A1.926 1.926 0 0 1 10 11c0-.55.196-1.02.588-1.412A1.926 1.926 0 0 1 12 9c.55 0 1.02.196 1.412.588.392.391.588.862.588 1.412 0 .55-.196 1.02-.588 1.412Z"
          />
          <path
            d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0Z"
          />
          <path
            d="M16.23 18.792a12.47 12.47 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0c-.487.12-.972.271-1.455.455a8.04 8.04 0 0 1-1.729-1.454c.89-.412 1.794-.729 2.709-.95A13.76 13.76 0 0 1 12 16c1.1 0 2.183.13 3.25.387a14.78 14.78 0 0 1 2.709.95 8.042 8.042 0 0 1-1.73 1.455Z"
          />
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tooltip > renders with string caption 2`] = `
<div
  aria-describedby=":r11:"
  aria-labelledby=":r10:"
  class="_tooltip_9b26f8"
  id=":r12:"
  role="tooltip"
  style="position: absolute; left: 0px; top: 0px; transform: translate(5px, 6px);"
  tabindex="-1"
>
  <svg
    aria-hidden="true"
    class="_arrow_9b26f8"
    height="10"
    style="position: absolute; pointer-events: none; bottom: 100%; transform: rotate(180deg); left: -1px;"
    viewBox="0 0 10 10"
    width="10"
  >
    <path
      d="M0,0 H10 L5,6 Q5,6 5,6 Z"
      stroke="none"
    />
    <clippath
      id=":r15:"
    >
      <rect
        height="10"
        width="10"
        x="0"
        y="0"
      />
    </clippath>
  </svg>
  <span
    id=":r10:"
  >
    I can have a caption
  </span>
  <span
    class="_caption_9b26f8 cpd-theme-dark"
    id=":r11:"
  >
    My beautiful caption
  </span>
</div>
`;
